Full-stack backend + Vercel config: Firebase, DTO, security, health endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "admin.html", "use": "@vercel/static" },
+    { "src": "usersurvey.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/admin", "dest": "/admin.html" },
+    { "src": "/usersurvey", "dest": "/usersurvey.html" },
+    { "src": "/", "dest": "/usersurvey.html" }
+  ]
+}
+{
   "version": 2
 }
