--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,4 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false,
-  "redirects": [
-    { "source": "/", "destination": "/usersurvey.html", "permanent": false }
-  ],
-  "rewrites": [
-    { "source": "/admin", "destination": "/admin.html" },
-    { "source": "/usersurvey", "destination": "/usersurvey.html" }
-  ]
+  "trailingSlash": false
 }
